fix(select): fix icon z-index

--- a/src/select/select.module.css
+++ b/src/select/select.module.css
@@ -114,5 +114,5 @@
   top: 50%;
   transform: translateY(-50%);
   right: calc(var(--field-padding) - calc(var(--field-padding) / 3));
-  z-index: 1;
+  z-index: 0;
 }
